# flashcards

./: .gitignore  LICENSE
projeto/backends/django-backend/: pyproject.toml
projeto/backends/django-backend/config/: settings.py  urls.py
projeto/backends/django-backend/flashcards/: admin.py  api.py  authentication.py  models.py  schemas.py  services.py
projeto/backends/fastapi-backend/: main.py  pyproject.toml
projeto/backends/fastapi-backend/app/: config.py  database.py  models.py  schemas.py  security.py
projeto/backends/fastapi-backend/app/routers/: __init__.py  auth.py  collections.py  flashcards.py  shares.py  subscriptions.py
projeto/backends/fastapi-backend/app/services/: ai_service.py
projeto/backends/fastapi-backend/app/utils/: errors.py  validators.py
projeto/backends/golang-backend/: .env.example  Dockerfile  go.mod  go.sum
projeto/backends/golang-backend/cmd/server/: main.go
projeto/backends/golang-backend/config/: config.go  config.toml
projeto/backends/golang-backend/database/: database.go  schema.sql
projeto/backends/golang-backend/handlers/: auth.go  collections.go  flashcards.go  shares.go  subscriptions.go
projeto/backends/golang-backend/middleware/: auth.go  cors.go
projeto/backends/golang-backend/models/: collection.go  flashcard.go  generation_log.go  payment.go  share.go  user.go
projeto/database/: .env.example  README.md  docker-compose.yml  init-db.sql
projeto/frontend/flashcards-frontend/: .env.example  package.json  pnpm-lock.yaml
projeto/frontend/flashcards-frontend/src/app/: layout.tsx  page.tsx
(+17 files in other folders)
